tests/golden/errors/cramped_binding.kso
fn main
  answer=42
  print "{answer}"
