tests/golden/errors/cramped_binding.stderr
error[formatting]: canonical form requires exactly one space here
  --> cramped_binding.kso:2:9
   2 |   answer=42
               ^
error[formatting]: canonical form requires exactly one space here
  --> cramped_binding.kso:2:10
   2 |   answer=42
                ^
